Fixed bug with invisible titles in the summary pages of products.

--- a/web-ui/public/css/views.css
+++ b/web-ui/public/css/views.css
@@ -264,6 +264,7 @@ td.border_right
 
 .cloud_summary h2
 {
+    color: #306DA7;
     font-size: 16px;
     font-weight: normal;
     padding-bottom: 5px;
